samples/_failures_safe/1761075227_20c922_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d70f341.c: In function ‘main’:
./samples/SAFE/__tmp_7d70f341.c:180:16: error: expected ‘)’ at end of input
  180 |     if (len > 0
      |        ~       ^
      |                )
./samples/SAFE/__tmp_7d70f341.c:180:5: error: expected declaration or statement at end of input
  180 |     if (len > 0
      |     ^~
